log/build_2023-11-07_12-03-02/robu/stderr.log
  File "/home/robu/work/robu_selpan19_ws/install/robu/lib/python3.10/site-packages/robu/ex10_wallfollower.py", line 3
    import rclpy.node import Node
                      ^^^^^^
SyntaxError: invalid syntax

